fixed dashboard spacing

--- a/app/client/stylesheets/_dashboard.scss
+++ b/app/client/stylesheets/_dashboard.scss
@@ -1,6 +1,6 @@
 #dashboard {
   background-image: linear-gradient(to right, #2a2a2a, #191919);
-  height: 100%;
+  
 
   .dashboard-content {
     background: inherit;
